Bug 1230815 - remove unused SetStripHtml() and accumulate HTML part to correct tag stripping. r=aceman